[project]
name = "catcher"
version = "0.1.0"
description = "Catcher is the summarizer for RSS feeds."
authors = [
    { name = "Kaikei-e", email = "" }
]
dependencies = [
    "flax~=0.6.10",
    "jax[cuda12_local]~=0.4.11",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
