[package]
name = "feed_harmony"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
chrono = "0.4.26"
serde = {version="1.0.163", features=["derive"]}
serde_json = "1.0.96"
tokio = {version="1.28.2", features=["full"]}
uuid = "1.3.3"
