[package]
name = "feed_harmony"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
chrono = {version="0.4.26", features=["serde"]}
serde = {version="1.0.163", features=["derive"]}
serde_json = "1.0.96"
tokio = {version="1.28.2", features=["full"]}
sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls", "mysql", "uuid", "chrono", "json"] }
dotenvy = "0.15.7"
mockall = "0.11.4"
[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]


