[package]
name = "feed_harmony"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
axum = "0.7.9"
chrono = {version="0.4.41", features=["serde"]}
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.140"
tokio = {version="1.45.0", features=["full"]}
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "mysql", "uuid", "chrono", "json"] }
dotenvy = "0.15.7"
mockall = "0.13.1"
[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]


