[package]
name = "feed_oracle"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "rest",
]

[dependencies]
axum = { version = "0.7.2" }
tokio = { version = "1.34.0", features = ["full"] }

[workspace.dependencies]
axum = { version = "0.7.2" }
tokio = { version = "1.34.0", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0" }

# my deps
rest = { path = "./rest" }

