[package]
name = "feed_oracle"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "rest",
    "domain",
    "usecase",
]

[dependencies]
axum = { version = "0.7.5" }
tokio = { version = "1.37.0", features = ["full"] }

[workspace.dependencies]
axum = { version = "0.7.5" }
tokio = { version = "1.37.0", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0" }

# my deps
rest = { path = "./rest" }
domain = { path = "./domain" }
usecase = { path = "./usecase" }
