[package]
name = "insight_straemer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
anyhow = "1.0.71"
chrono = {version="0.4.38", features=["serde"]}
serde = {version="1.0.199", features=["derive"]}
serde_json = "1.0.116"
tokio = {version="1.37.0", features=["full"]}
sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls", "mysql", "uuid", "chrono", "json"] }
dotenvy = "0.15.7"
mockall = "0.12.1"
async-trait = "0.1.73"
rss = "2.0.6"
url = "2.4.1"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]
